--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -5,6 +5,9 @@ on:
   #     - main
   pull_request:
     branches: [main]
+  paths:
+    - 'docs/**'
+    - mkdocs.yml
 permissions:
   contents: write
 jobs:
