Expand instructions for Windows

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,4 +27,4 @@ repo_url: https://github.com/qwrtln/Homm3BG-mission-book
 repo_name: Fan-Made Mission Book
 nav:
   - Home: index.md
-  - LaTeX Setup: latex.md
+  - Local Setup: setup.md
