--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -1,10 +1,12 @@
 name: Publish Docs 
 on:
-  # push:
-  #   branches:
-  #     - main
-  pull_request:
-    branches: [main]
+  push:
+    branches:
+      - main
+    paths:
+      - 'docs/**'
+      - mkdocs.yml
+
 permissions:
   contents: write
 jobs:
