--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,6 @@
 * @qwrtln
+/.github/ @qwrtln
+/clash/ @Re4XN @tomaas-zeman @qwrtln
+/coops/ @Re4XN @tomaas-zeman @qwrtln
+/campaigns/ @Re4XN @tomaas-zeman @qwrtln
+/templates/ @tomaas-zeman @qwrtln
