Setup tarnslations of the document

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -1,4 +1,15 @@
-[po4a_langs] pl fr 
+[po4a_langs] pl fr cs
 [po4a_paths] translations/$master/$master.pot $lang:translations/$master/$lang.po
+
+[type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+
+[type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+
+[type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+
+[type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [options] --keep 0
