--- a/.github/workflows/check-po4a-entries.yaml
+++ b/.github/workflows/check-po4a-entries.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Check po4a.cfg entries
         run: |
           ERRORS=0
-          for file in $(find . -type f -name "*tex" | grep -v 'main\|metadata')
+          for file in $(find . -type f -name "*tex" | grep -v 'main\|metadata\|templates')
           do
               if ! grep -q "${file:2}" po4a.cfg; then
                   echo "${file:2} not found in po4a.cfg"
