--- a/po4a.cfg
+++ b/po4a.cfg
@@ -11,6 +11,7 @@
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:clash/translated/$lang/inferno_devilish_plan.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/inferno_steadwicks_fall.tex $lang:clash/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
