--- a/po4a.cfg
+++ b/po4a.cfg
@@ -12,6 +12,7 @@
 
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:clash/translated/$lang/inferno_devilish_plan.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:clash/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/inferno_deal_with_the_devil.tex $lang:clash/translated/$lang/inferno_deal_with_the_devil.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
