--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Compile rule book
         uses: xu-cheng/latex-action@v3
         with:
-          extra_system_packages: "inkscape"
+          extra_system_packages: "inkscape texmf-dist-fontsextra"
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1
