--- a/po4a.cfg
+++ b/po4a.cfg
@@ -8,6 +8,7 @@
 [type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] clash/force_of_will.tex $lang:clash/translated/$lang/force_of_will.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
