Update package indexes before installation in workflows

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
-          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
+          sudo apt-get update && sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
           wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
           export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
           tar -xf ${PO4A_DIR}.tar.gz
@@ -71,7 +71,7 @@ jobs:
 
       - name: Install pdfinfo
         if: ${{ matrix.language == 'en' }}
-        run: sudo apt-get install -y poppler-utils
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
 
       - name: Check number of pages
         id: check_pages
@@ -107,7 +107,7 @@ jobs:
 
     steps:
       - name: Install pdfinfo
-        run: sudo apt-get install -y poppler-utils
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
 
 
       - name: Download PDFs
