--- a/.github/workflows/po4a-comment-check.yaml
+++ b/.github/workflows/po4a-comment-check.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install po4a
         run: |
-          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
+          sudo apt-get update && sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
           wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
           export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
           tar -xf ${PO4A_DIR}.tar.gz
