--- a/po4a.cfg
+++ b/po4a.cfg
@@ -16,5 +16,6 @@
 
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
 
 [options] --keep 0
