--- a/po4a.cfg
+++ b/po4a.cfg
@@ -9,6 +9,7 @@
 
 [type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
