Fix non-scenario section header + art + po4a

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -15,8 +15,9 @@
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] campaigns/inferno_deal_with_the_devil.tex $lang:campaigns/translated/$lang/inferno_deal_with_the_devil.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
+[type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
-[type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
 
 [options] --keep 0
