--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -16,7 +16,7 @@ jobs:
         shell: bash
         run: |
           ERRORS=0
-          WORDS=("deck" "field" "hero" "level" "unit")
+          WORDS=("deck" "faction" "field" "hero" "level" "round" "scenario" "tile" "unit")
           for file in $(git grep -Il '' | grep tex$)
           do
             for word in ${WORDS[@]}
