--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -17,7 +17,7 @@ jobs:
         run: |
           ERRORS=0
           WORDS=("deck" "faction" "field" "hero" "level" "round" "scenario" "tile" "unit")
-          for file in $(git grep -Il '' | grep tex$)
+          for file in $(git grep -Il '' | grep tex$ | grep -v metadata)
           do
             for word in ${WORDS[@]}
             do
