Color check output

--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -24,7 +24,7 @@ jobs:
               if grep -qP "\s$word" $file; then
                 echo ""
                 echo "Found $word instead of ${word^} in $file:"
-                grep -nHP "\s$word" $file
+                grep -nHP --color=always "\s$word" $file
                 ERRORS=1
               fi
             done
