--- a/.github/workflows/check-po4a-entries.yaml
+++ b/.github/workflows/check-po4a-entries.yaml
@@ -15,13 +15,13 @@ jobs:
       - name: Check po4a.cfg entries
         run: |
           ERRORS=0
-          for file in $(find . -type f -name "*tex" | grep -v 'main\|metadata\|templates')
+          for file in $(find . -type f -name "*tex" | grep -v 'main\|metadata\|templates\|draft-scenarios')
           do
-              if ! grep -q "${file:2}" po4a.cfg; then
-                  echo "${file:2} not found in po4a.cfg"
-                  ERRORS=1
-              fi
+            if ! grep -q "${file:2}" po4a.cfg; then
+              echo "${file:2} not found in po4a.cfg"
+              ERRORS=1
+            fi
           done
           if [[ $ERRORS == 1 ]]; then
-              exit 1
+            exit 1
           fi
