--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Optimize PDF
         run: |
+          pwd
+          ls
           du -sh main_en.pdf
           gs -o main_en_optimized.pdf \
             -sDEVICE=pdfwrite \
@@ -58,7 +60,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: github.event_name == 'pull_request'
         with:
-          name: main_en
+          name: main_en_drafts
           path: main_en.pdf
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
