--- a/po4a.cfg
+++ b/po4a.cfg
@@ -6,6 +6,7 @@
 [type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] coops/emerald_island.tex $lang:coops/translated/$lang/emerald_island.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] coops/ai_evolutionary.tex $lang:coops/translated/$lang/emerald_island.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] clash/bloody_grail.tex $lang:clash/translated/$lang/bloody_grail.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
