--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -16,15 +16,15 @@ jobs:
         shell: bash
         run: |
           ERRORS=0
-          WORDS=("deck" "faction" "field" "hero" "level" "round" "scenario" "tile" "unit")
+          WORDS=("deck" "faction" "field" "hero" "level" "round" "scenario" "tile" "unit" "when")
           for file in $(git grep -Il '' | grep tex$ | grep -v metadata)
           do
             for word in ${WORDS[@]}
             do
-              if grep -qP "\s$word" $file | grep -v "% no-check-caps$"; then
+              if grep -v "% no-check-caps$" $file | grep -q "\s$word"; then
                 echo "---"
                 echo "Found \"$word\" instead of \"${word^}\" in $file:" | grep -i $word --color=always
-                grep -nHP --color=always "\s$word" $file
+                grep -nH --color=always "\s$word" $file
                 ERRORS=1
               fi
             done
