--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -21,10 +21,10 @@ jobs:
           do
             for word in ${WORDS[@]}
             do
-              if grep -qP "\s$word" $file | grep -v "% no-check-caps$"; then
+              if grep -v "% no-check-caps$" $file | grep -q "\s$word"; then
                 echo "---"
                 echo "Found \"$word\" instead of \"${word^}\" in $file:" | grep -i $word --color=always
-                grep -nHP --color=always "\s$word" $file
+                grep -nH --color=always "\s$word" $file
                 ERRORS=1
               fi
             done
