Fix typo in issue parser workflow

--- a/.github/workflows/parse-new-scenario.yaml
+++ b/.github/workflows/parse-new-scenario.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   parse-new-scenario:
-    if: ${{ ! startsWith(github.event.issue.title, 'New Scenario:') }}
+    if: ${{ startsWith(github.event.issue.title, 'New Scenario:') }}
     name: Parsing new scenario
     runs-on: ubuntu-latest
     steps:
