--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Everything else
-    url: https://discord.gg/khV8Ckw8RD
+    url: https://discord.gg/Y4uM9pPWF6
     about: Join us on Discord
