--- a/.github/workflows/check-capitalization.yaml
+++ b/.github/workflows/check-capitalization.yaml
@@ -16,7 +16,7 @@ jobs:
         shell: bash
         run: |
           ERRORS=0
-          WORDS=("card" "cards" "deck" "faction" "field" "grail" "hero" "level" "round" "scenario" "tile" "unit")
+          WORDS=("card" "cards" "cube" "cubes" "deck" "faction" "field" "grail" "hero" "level" "round" "scenario" "tile" "unit")
           for file in $(git grep -Il '' | grep tex$ | grep -v metadata)
           do
             for word in ${WORDS[@]}
