--- a/po4a.cfg
+++ b/po4a.cfg
@@ -19,6 +19,7 @@
 [type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [options] --keep 0
