--- a/.github/workflows/check-final-newline.yaml
+++ b/.github/workflows/check-final-newline.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check final newline
-        uses: qwrtln/check-final-newline@update-image
+        uses: qwrtln/check-final-newline@v1
