--- a/.github/workflows/po4a-check.yaml
+++ b/.github/workflows/po4a-check.yaml
@@ -4,10 +4,6 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  PO4A_VERSION: "0.72"
-  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
-
 jobs:
   check_po4a:
     if: github.event_name == 'pull_request'
@@ -20,13 +16,13 @@ jobs:
       - name: Install po4a
         run: |
           sudo apt-get update && sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
+          wget --quiet ${{ vars.PO4A_GH_URL }}/v${{ vars.PO4A_VERSION }}/po4a-${{ vars.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
+          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
           tar -xf ${PO4A_DIR}.tar.gz
 
       - name: Check if translations require updating
         run: |
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
+          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
           ./${PO4A_DIR}/po4a -v po4a.cfg
           if [[ `git status --porcelain translations` ]]; then
