--- a/.github/workflows/po4a-comment-check.yaml
+++ b/.github/workflows/po4a-comment-check.yaml
@@ -11,10 +11,6 @@ permissions:
   id-token: write
   statuses: write
 
-env:
-  PO4A_VERSION: "0.72"
-  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
-
 jobs:
   check-comment:
     name: Check po4a changes to commit
@@ -33,13 +29,13 @@ jobs:
       - name: Install po4a
         run: |
           sudo apt-get update && sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
+          wget --quiet ${{ vars.PO4A_GH_URL }}/v${{ vars.PO4A_VERSION }}/po4a-${{ vars.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
+          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
           tar -xf ${PO4A_DIR}.tar.gz
 
       - name: Run po4a
         run: |
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
+          export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
           ./${PO4A_DIR}/po4a -v po4a.cfg
 
