--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -83,9 +83,9 @@ jobs:
       - name: Check for broken CMap
         if: github.event_name == 'pull_request'
         run: |
-          pdftotext main_${{ matrix.language }}.pdf - | grep -i ${{ matrix.testing-words }}
+          pdftotext main_${{ matrix.language }}.pdf - | grep -i "${{ matrix.testing-words }}"
           if [[ $? -ne 0 ]]; then
-            echo "The CMap in ${{ matrix.language }} language is broken. See the output of 'Optimize PDF' step above."
+            echo "The CMap in main_${{ matrix.language }}.pdf file is broken. See the output of 'Optimize PDF' step above."
             exit 1
           fi
 
