--- a/po4a.cfg
+++ b/po4a.cfg
@@ -22,4 +22,9 @@
 [type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
-[options] --keep 0
+[options] --addendum-charset=UTF-8 \
+          --localized-charset=UTF-8 \
+          --master-charset=UTF-8 \
+          --master-language=en_US \
+          --keep 0 \
+          -v
