--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -35,7 +35,7 @@ jobs:
           export PO4A_DIR="po4a-${{ vars.PO4A_VERSION }}"
           tar -xf ${PO4A_DIR}.tar.gz
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
-          ./${PO4A_DIR}/po4a -v --no-update po4a.cfg
+          ./${PO4A_DIR}/po4a --no-update po4a.cfg
 
       - name: Compile mission book
         uses: xu-cheng/latex-action@v3
