--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -22,6 +22,7 @@ jobs:
           - language: en
           - language: pl
           - language: cs
+          - language: de
 
     steps:
       - name: Set up repository
@@ -113,7 +114,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["pl", "cs"]
+        language: ["pl", "cs", "de"]
 
     steps:
       - name: Install poppler
