Change wrap-po mode for po files

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -26,5 +26,6 @@
           --localized-charset=UTF-8 \
           --master-charset=UTF-8 \
           --master-language=en_US \
+          --wrap-po=newlines \
           --keep 0 \
           -v
