--- a/po4a.cfg
+++ b/po4a.cfg
@@ -15,6 +15,9 @@
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] campaigns/inferno_deal_with_the_devil.tex $lang:campaigns/translated/$lang/inferno_deal_with_the_devil.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/castle_greek_gift.tex $lang:campaigns/translated/$lang/castle_greek_gift.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/castle_sicilian_dragon.tex $lang:campaigns/translated/$lang/castle_sicilian_dragon.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
+[type: latex] campaigns/castle_two_knights_defense.tex $lang:campaigns/translated/$lang/castle_two_knights_defense.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 
 [type: latex] sections/what_to_play.tex $lang:sections/translated/$lang/what_to_play.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize"
 [type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex opt:"-o verbatim=multicols*,multicols,tikzpicture,scriptsize,figure*"
